version/dev/_sources/api/ansys/mechanical/stubs/v242/Ansys/ACT/Automation/Mechanical/BoundaryConditions/LoadGroup.rst.txt
.. vale off



:class:`LoadGroup`
==================

.. py:class:: ansys.mechanical.stubs.v242.Ansys.ACT.Automation.Mechanical.BoundaryConditions.LoadGroup

   Bases: :py:obj:`object`


   
   Defines a LoadGroup.
















   ..
       !! processed by numpydoc !!


.. py:currentmodule:: LoadGroup

Overview
--------

.. tab-set::



   .. tab-item:: Methods

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Activate`
            - Activate the current object.
          * - :py:attr:`~AddComment`
            - Creates a new child Comment.
          * - :py:attr:`~AddCurrent`
            - Creates a new Current
          * - :py:attr:`~AddFigure`
            - Creates a new child Figure.
          * - :py:attr:`~AddImage`
            - Creates a new child Image.
          * - :py:attr:`~AddVoltage`
            - Creates a new Voltage
          * - :py:attr:`~CopyTo`
            - Copies all visible properties from this object to another.
          * - :py:attr:`~CreateParameter`
            - Creates a new parameter for a Property.
          * - :py:attr:`~Delete`
            - Run the Delete action.
          * - :py:attr:`~Duplicate`
            - Creates a copy of the current DataModelObject.
          * - :py:attr:`~GenerateRemoteLoads`
            - Run the action to generate the remote loads from the source data.
          * - :py:attr:`~GetChildren`
            - Gets the list of children, filtered by type.
          * - :py:attr:`~GetParameter`
            - Gets the parameter corresponding to the given property.
          * - :py:attr:`~GroupAllSimilarChildren`
            - Run the GroupAllSimilarChildren action.
          * - :py:attr:`~GroupSimilarObjects`
            - Run the GroupSimilarObjects action.
          * - :py:attr:`~PropertyByAPIName`
            - Get a property by its API name.
          * - :py:attr:`~PropertyByName`
            - Get a property by its unique name.
          * - :py:attr:`~RemoveParameter`
            - Removes the parameter from the parameter set corresponding to the given property.


   .. tab-item:: Properties

      .. list-table::
          :header-rows: 0
          :widths: auto

          * - :py:attr:`~Children`
            - Gets the list of children.
          * - :py:attr:`~Comments`
            - Gets the list of associated comments.
          * - :py:attr:`~ConductingArea`
            - Gets or sets the ConductingArea.
          * - :py:attr:`~ConductorCurrent`
            - Gets or sets the ConductorCurrent.
          * - :py:attr:`~ConductorType`
            - Gets or sets the ConductorType.
          * - :py:attr:`~DataImportStatus`
            - Gets the DataImportStatus.
          * - :py:attr:`~DataModelObjectCategory`
            - Gets the current DataModelObject's category.
          * - :py:attr:`~Figures`
            - Gets the list of associated figures.
          * - :py:attr:`~FilterByOrder`
            - Gets or sets whether imported remote loads are filtered by order. The order is specified in the Orders property.
          * - :py:attr:`~GroupingType`
            - Gets or sets the GroupingType.
          * - :py:attr:`~Images`
            - Gets the list of associated images.
          * - :py:attr:`~ImportedDataType`
            - Gets or sets the ImportedDataType.
          * - :py:attr:`~InternalObject`
            - Gets the internal object. For advanced usage only.
          * - :py:attr:`~InterpolateRPM`
            - Gets or Sets the Interpolate RPM.
          * - :py:attr:`~Location`
            - Gets or sets the Location.
          * - :py:attr:`~NumberOfFrequenciesToConsider`
            - Gets or sets the NumberOfFrequenciesToConsider.
          * - :py:attr:`~NumberOfPoints`
            - Gets or Sets the Number of Points.
          * - :py:attr:`~NumberOfTurns`
            - Gets or sets the NumberOfTurns.
          * - :py:attr:`~OnDataRefreshOption`
            - Gets or sets the OnDataRefreshOption.
          * - :py:attr:`~Orders`
            - Gets or Sets the Orders. These orders are imported from the maxwell solution and the Analysis Settings will be synced with the orders specified.
          * - :py:attr:`~PhaseAngle`
            - Gets or sets the PhaseAngle.
          * - :py:attr:`~Properties`
            - Gets the list of properties for this object.
          * - :py:attr:`~RPMFileSelection`
            - Gets or Sets the File Selection (.csv) for User Defined RPM Interpolation.
          * - :py:attr:`~SolutionId`
            - Gets or sets the SolutionId.
          * - :py:attr:`~Suppressed`
            - Gets or sets the Suppressed.
          * - :py:attr:`~TransferFileName`
            - Gets or sets the TransferFileName.
          * - :py:attr:`~UseInternalRemotePoints`
            - Gets or sets the UseInternalRemotePoints.
          * - :py:attr:`~VisibleProperties`
            - Gets the list of properties that are visible for this object.







Property detail
---------------
.. py:property:: Children
   :type: Optional[System.Collections.Generic.IList[Ansys.Mechanical.DataModel.Interfaces.IDataModelObject]]

   
   Gets the list of children.
















   ..
       !! processed by numpydoc !!

.. py:property:: Comments
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Comment]]

   
   Gets the list of associated comments.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConductingArea
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the ConductingArea.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConductorCurrent
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the ConductorCurrent.
















   ..
       !! processed by numpydoc !!

.. py:property:: ConductorType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.SourceConductorType]

   
   Gets or sets the ConductorType.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataImportStatus
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataImportStatus]

   
   Gets the DataImportStatus.
















   ..
       !! processed by numpydoc !!

.. py:property:: DataModelObjectCategory
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataModelObjectCategory]

   
   Gets the current DataModelObject's category.
















   ..
       !! processed by numpydoc !!

.. py:property:: Figures
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Figure]]

   
   Gets the list of associated figures.
















   ..
       !! processed by numpydoc !!

.. py:property:: FilterByOrder
   :type: Optional[System.Boolean]

   
   Gets or sets whether imported remote loads are filtered by order. The order is specified in the Orders property.
















   ..
       !! processed by numpydoc !!

.. py:property:: GroupingType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.LoadGroupingType]

   
   Gets or sets the GroupingType.
















   ..
       !! processed by numpydoc !!

.. py:property:: Images
   :type: Optional[System.Collections.Generic.IEnumerable[Ansys.ACT.Automation.Mechanical.Image]]

   
   Gets the list of associated images.
















   ..
       !! processed by numpydoc !!

.. py:property:: ImportedDataType
   :type: Optional[Ansys.Mechanical.DataModel.Enums.DataTypeOptions]

   
   Gets or sets the ImportedDataType.
















   ..
       !! processed by numpydoc !!

.. py:property:: InternalObject
   :type: Optional[Ansys.Common.Interop.DSObjectsAuto.IDSLoadGroupAuto]

   
   Gets the internal object. For advanced usage only.
















   ..
       !! processed by numpydoc !!

.. py:property:: InterpolateRPM
   :type: Optional[Ansys.Mechanical.DataModel.Enums.InterpolateRPM]

   
   Gets or Sets the Interpolate RPM.
















   ..
       !! processed by numpydoc !!

.. py:property:: Location
   :type: Optional[Ansys.ACT.Interfaces.Common.ISelectionInfo]

   
   Gets or sets the Location.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfFrequenciesToConsider
   :type: Optional[System.UInt32]

   
   Gets or sets the NumberOfFrequenciesToConsider.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfPoints
   :type: Optional[System.UInt32]

   
   Gets or Sets the Number of Points.
















   ..
       !! processed by numpydoc !!

.. py:property:: NumberOfTurns
   :type: Optional[System.UInt32]

   
   Gets or sets the NumberOfTurns.
















   ..
       !! processed by numpydoc !!

.. py:property:: OnDataRefreshOption
   :type: Optional[Ansys.Mechanical.DataModel.Enums.RemotePointUpdateOptions]

   
   Gets or sets the OnDataRefreshOption.
















   ..
       !! processed by numpydoc !!

.. py:property:: Orders
   :type: Optional[System.String]

   
   Gets or Sets the Orders. These orders are imported from the maxwell solution and the Analysis Settings will be synced with the orders specified.
















   ..
       !! processed by numpydoc !!

.. py:property:: PhaseAngle
   :type: Optional[Ansys.Core.Units.Quantity]

   
   Gets or sets the PhaseAngle.
















   ..
       !! processed by numpydoc !!

.. py:property:: Properties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties for this object.
















   ..
       !! processed by numpydoc !!

.. py:property:: RPMFileSelection
   :type: Optional[System.String]

   
   Gets or Sets the File Selection (.csv) for User Defined RPM Interpolation.
















   ..
       !! processed by numpydoc !!

.. py:property:: SolutionId
   :type: Optional[System.Int32]

   
   Gets or sets the SolutionId.
















   ..
       !! processed by numpydoc !!

.. py:property:: Suppressed
   :type: Optional[System.Boolean]

   
   Gets or sets the Suppressed.
















   ..
       !! processed by numpydoc !!

.. py:property:: TransferFileName
   :type: Optional[System.String]

   
   Gets or sets the TransferFileName.
















   ..
       !! processed by numpydoc !!

.. py:property:: UseInternalRemotePoints
   :type: Optional[System.Boolean]

   
   Gets or sets the UseInternalRemotePoints.
















   ..
       !! processed by numpydoc !!

.. py:property:: VisibleProperties
   :type: Optional[System.Collections.Generic.IReadOnlyList[Ansys.ACT.Automation.Mechanical.Property]]

   
   Gets the list of properties that are visible for this object.
















   ..
       !! processed by numpydoc !!





Method detail
-------------
.. py:method:: Activate() -> System.Void

   
   Activate the current object.

   ..
       !! processed by numpydoc !!

.. py:method:: AddComment() -> Ansys.ACT.Automation.Mechanical.Comment

   
   Creates a new child Comment.

   ..
       !! processed by numpydoc !!

.. py:method:: AddCurrent() -> Ansys.ACT.Automation.Mechanical.BoundaryConditions.Current

   
   Creates a new Current

   ..
       !! processed by numpydoc !!

.. py:method:: AddFigure() -> Ansys.ACT.Automation.Mechanical.Figure

   
   Creates a new child Figure.

   ..
       !! processed by numpydoc !!

.. py:method:: AddImage(filePath: System.String) -> Ansys.ACT.Automation.Mechanical.Image

.. code-block:: text

   Creates a new child Image.
   If a filePath is provided, the image will be loaded from that file,
   if not, the image will be a screen capture of the Geometry window.

..
       !! processed by numpydoc !!

.. py:method:: AddVoltage() -> Ansys.ACT.Automation.Mechanical.BoundaryConditions.Voltage

   
   Creates a new Voltage

   ..
       !! processed by numpydoc !!

.. py:method:: CopyTo(other: Ansys.ACT.Automation.Mechanical.DataModelObject) -> System.Void

   
   Copies all visible properties from this object to another.

   ..
       !! processed by numpydoc !!

.. py:method:: CreateParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Creates a new parameter for a Property.

   ..
       !! processed by numpydoc !!

.. py:method:: Delete() -> System.Void

   
   Run the Delete action.

   ..
       !! processed by numpydoc !!

.. py:method:: Duplicate() -> Ansys.Mechanical.DataModel.Interfaces.IDataModelObject

   
   Creates a copy of the current DataModelObject.

   ..
       !! processed by numpydoc !!

.. py:method:: GenerateRemoteLoads() -> System.Void

   
   Run the action to generate the remote loads from the source data.

   ..
       !! processed by numpydoc !!

.. py:method:: GetChildren(recurses: System.Boolean, children: System.Collections.Generic.IList[ChildrenType]) -> System.Collections.Generic.IList[ChildrenType]

   
   Gets the list of children, filtered by type.

   ..
       !! processed by numpydoc !!

.. py:method:: GetParameter(propName: System.String) -> Ansys.ACT.Interfaces.Mechanical.IParameter

   
   Gets the parameter corresponding to the given property.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupAllSimilarChildren() -> System.Void

   
   Run the GroupAllSimilarChildren action.

   ..
       !! processed by numpydoc !!

.. py:method:: GroupSimilarObjects() -> Ansys.ACT.Automation.Mechanical.TreeGroupingFolder

   
   Run the GroupSimilarObjects action.

   ..
       !! processed by numpydoc !!

.. py:method:: PropertyByAPIName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

.. code-block:: text

   Get a property by its API name.
   If multiple properties have the same API Name, only the first property with that name will be returned.

..
       !! processed by numpydoc !!

.. py:method:: PropertyByName(name: System.String) -> Ansys.ACT.Automation.Mechanical.Property

   
   Get a property by its unique name.

   ..
       !! processed by numpydoc !!

.. py:method:: RemoveParameter(propName: System.String) -> System.Void

   
   Removes the parameter from the parameter set corresponding to the given property.

   ..
       !! processed by numpydoc !!



.. vale on